# cs397

./: .gitignore  README.md
ass1/: CMakeLists.txt
ass1/.bin/: cs397_project.ilk  imgui.ini
ass1/data/: LifeExpectancyData.csv
ass1/dependencies/include/glad/: glad.h
ass1/dependencies/lib/: glad.exp  glfw3dll.exp  gtest.exp  gtestd.exp
ass1/src/: DatasetCreator.cpp  DatasetCreator.h  Regression.cpp  Regression.h  RegressionTests.cpp
lab1/: LinearLogisticRegression.xlsx
lab2/: hierarchical_clustering.sln  master.output.txt  out.txt
lab2/hierarchical_clustering/: DatasetCreator.cpp  DatasetCreator.h  HierarchicalClustering.cpp  HierarchicalClustering.h  hierarchical_clustering.vcxproj  hierarchical_clustering.vcxproj.filters  main.cpp
